fix: header spacing

--- a/standard.css
+++ b/standard.css
@@ -73,7 +73,8 @@ main {
 main .wrap-body>section {
 	margin: 40px auto;
 }
-.wrap-body>section>* {
+main .wrap-body>section>*,
+footer .wrap-body>section>* {
 	margin: 10px 0;
 }
 
